发布项目到github

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>usian_order_service</module>
         <module>usian_order_feign</module>
         <module>usian_order_web</module>
+        <module>common_config</module>
     </modules>
     <!--Spring Boot 父工程-->
     <parent>
