--- a/usian_item_service/pom.xml
+++ b/usian_item_service/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>common_utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--Spring Cloud Config Client Starter-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
